platform-services/janitor-bot/tests/snapshots/integration__pr__renovate-opened-outside-window.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: remove_labels
        ran: false
      - action: add_labels
        ran: false
      - action: approve
        ran: false
      - action: merge
        ran: false
      - action: add_labels
        ran: true
    dry_run: false
    name: manage-renovate
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/abc0000000000000000000000000000000000000/status
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#fbca04"
      description: ~
      exclusive: ~
      is_archived: ~
      name: janitor/queued
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/100/labels
    body:
      labels:
        - janitor/queued
      updated_at: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
