platform-services/janitor-bot/tests/snapshots/integration__pr__renovate-workflow-change.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: remove_labels
        ran: true
      - action: add_labels
        ran: true
      - action: approve
        ran: true
      - action: merge
        ran: true
      - action: add_labels
        ran: false
    dry_run: false
    name: manage-renovate
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/def0000000000000000000000000000000000000/status
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#e4e669"
      description: ~
      exclusive: ~
      is_archived: ~
      name: automated
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/101/labels
    body:
      labels:
        - automated
      updated_at: ~
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    body:
      body: "Auto-approved: Renovate PR targeting workflows/Dockerfiles"
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/101/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
